[gd_scene load_steps=3 format=2]

[ext_resource path="res://scripts/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://themes/MainTheme.tres" type="Theme" id=2]

[node name="Node" type="Node"]
script = ExtResource( 1 )

[node name="Control" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
theme = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Control/MarginContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 391.0
margin_bottom = 470.0

[node name="VBoxContainer" type="VBoxContainer" parent="Control/MarginContainer/HBoxContainer"]
margin_right = 371.0
margin_bottom = 450.0
custom_constants/separation = 10

[node name="Tutorial_btn" type="Button" parent="Control/MarginContainer/HBoxContainer/VBoxContainer"]
margin_right = 371.0
margin_bottom = 82.0
text = "Tutorial"

[node name="Survival_btn" type="Button" parent="Control/MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 92.0
margin_right = 371.0
margin_bottom = 174.0
text = "Survival"

[node name="Options_btn" type="Button" parent="Control/MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 184.0
margin_right = 371.0
margin_bottom = 266.0
text = "Options"

[node name="Credits_btn" type="Button" parent="Control/MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 276.0
margin_right = 371.0
margin_bottom = 358.0
text = "Credits"

[node name="Exit_btn" type="Button" parent="Control/MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 368.0
margin_right = 371.0
margin_bottom = 450.0
text = "Exit"

[connection signal="pressed" from="Control/MarginContainer/HBoxContainer/VBoxContainer/Tutorial_btn" to="." method="_on_Tutorial_btn_pressed"]
[connection signal="pressed" from="Control/MarginContainer/HBoxContainer/VBoxContainer/Survival_btn" to="." method="_on_Survival_btn_pressed"]
[connection signal="pressed" from="Control/MarginContainer/HBoxContainer/VBoxContainer/Options_btn" to="." method="_on_Options_btn_pressed"]
[connection signal="pressed" from="Control/MarginContainer/HBoxContainer/VBoxContainer/Credits_btn" to="." method="_on_Credits_btn_pressed"]
[connection signal="pressed" from="Control/MarginContainer/HBoxContainer/VBoxContainer/Exit_btn" to="." method="_on_Exit_btn_pressed"]
